plugins {
  id 'java'
  id 'groovy-gradle-plugin'
  id("org.springframework.boot") version "3.4.3" apply false
  id("io.spring.dependency-management") version "1.1.7"
}

repositories {
  gradlePluginPortal()
}

apply from: "dependencies.gradle"

java {
  sourceCompatibility = '21'
}

println "Build environment = [$ENV]"
if (ENV == 'prod') {
  build.finalizedBy 'publish'
}

allprojects {
  apply plugin: 'java-library'
  apply plugin: 'maven-publish'
  apply plugin: 'jacoco'

  group = 'org.endeavourhealth.pipeline.inbound'
  version = '1.0-SNAPSHOT'

  java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
  }

  tasks.withType(JavaCompile) {
    options.compilerArgs += '-parameters'
    options.encoding = 'UTF-8'
  }

  jacocoTestReport {
    reports {
      xml.required.set(true)
    }
  }

  test.finalizedBy jacocoTestReport

  repositories {
    mavenLocal()
    mavenCentral()
    maven {
      url = uri('https://artifactory.endhealth.co.uk/repository/maven-releases')
    }
    maven {
      url = uri('https://artifactory.endhealth.co.uk/repository/maven-snapshots')
    }
  }
}

task myJavadocs(type: Javadoc) {
  source = sourceSets.main.allJava
}
